# SintoniaMental

./: .env.exemple  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
ProjectSintonia/: asgi.py  settings.py  urls.py  wsgi.py
ProjectSintonia/settings/: development.py  origin_base.py  production.py
faq_app/: admin.py  models.py  urls.py  views.py
faq_app/migrations/: 0001_initial.py  0002_alter_questionanswer_category.py  0003_alter_questionanswer_list_answer.py
faq_app/templates/faq_app/: faq.html
global_templates/: base.html  navbar.html
main_app/: admin.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py
main_app/template/main_app/: home.html
main_app/templates/main_app/: faq.html  home.html
questionnaire_app/: admin.py  models.py  urls.py  views.py
questionnaire_app/migrations/: 0001_initial.py
register_app/: models.py  urls.py  views.py
register_app/migrations/: 0001_initial.py
register_login_app/: admin.py  forms.py  models.py  urls.py  views.py
register_login_app/migrations/: 0001_initial.py
register_login_app/static/js/: script.js
relacion_user_app/: admin.py  apps.py  models.py
relacion_user_app/migrations/: 0001_initial.py  0002_alter_testimonial_expert_alter_testimonial_patient_and_more.py
static/css/: customize.css  dashboard.css  global_style.css  variables.css
static/js/: global_script.js
user_patient_app/: apps.py  urls.py  views.py
user_specialist_app/: apps.py  urls.py  views.py
video_consult_app/: apps.py  urls.py  views.py
(+49 files in other folders)
