[project]
name = "sintoniamental"
version = "0.1.0"
description = ""
authors = [
    {name = "Lord_Doug",email = "106497954+DougVikt@users.noreply.github.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "make (>=0.1.6.post2,<0.2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
